# SiMaster

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  method.md  migration.md
experiments/hl_lognormal_likelihood/: README.md  experiment.py  experiment_matrix.py
experiments/hl_lognormal_likelihood/results/: matrix_summary.json  summary.json
notebooks/: quickstart.ipynb  simaster_vs_namaster.ipynb
report/: feasibility_section.tex  fisher_methods_section.tex  main.tex  validation_section.tex
scripts/: bench_almond_device.py  bench_deflation.py  bench_feasibility.py  bench_sht_scaling.py  build_report.py  run_all_validation.sh  run_nside1024.py  run_remaining.sh  val1_cmb.py  val2_fisher_xfactor.py  val2_ivar.py  val2x_replot.py  val3_lss.py  val4_iterate.py  val_common.py  val_inputs_figs.py
simaster/: __init__.py  almond_device.py  bins.py  cg.py  compat.py  covariance.py  deflation.py  exact.py  field.py  fisher_auto.py  fisher_worker.py  mc_fisher.py  noise.py  qml.py  radical.py  score.py  sht.py  subsample.py  utils.py
simaster/nersc/: __init__.py  run_auto.py  run_auto.sh  slurm.py
tests/: test_banded.py  test_basis.py  test_cholesky.py  test_deflation.py  test_noise.py  test_operators.py  test_qml.py  test_radical.py  test_score.py  test_subsample.py
