[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simaster"
version = "0.1.0"
description = "QML (quadratic maximum likelihood) power spectrum estimation on the sphere, GPU-accelerated via JAX, with a NaMaster-like interface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Anze Slosar" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.30",
    "healpy>=1.16",
    "ducc0>=0.34",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]"]
# Native-JAX on-device SHT backend (backend='s2fft'). Needs an s2fft build
# with exact HEALPix spin-2 synthesis; releases <= 1.4.0 have the spin
# recursion-node bug (the backend self-checks and refuses to run on a buggy
# build). See docs/method.md.
s2fft = ["s2fft"]
healsparse = ["healsparse"]
test = ["pytest", "pytest-cov"]
validation = ["pyccl", "matplotlib", "pymaster"]

[tool.setuptools.packages.find]
include = ["simaster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: heavy statistical tests, excluded in CI"]
